--- a/index.html
+++ b/index.html
@@ -48,11 +48,21 @@
         <ul>
           <li>
             <p class="worksDate">2024.3月</p>
-            <a href="" target="_blank" class="worksTitle">彈跳球遊戲</a>
+            <a
+              href="https://wendywang1031.github.io/bouncingBallGame/"
+              target="_blank"
+              class="worksTitle"
+              >彈跳球遊戲</a
+            >
             <p class="worksMethods">使用Html , CSS , JavaScript</p>
           </li>
           <li>
-            <a href="" target="_blank" class="worksTitle">貪食蛇遊戲</a>
+            <a
+              href="https://wendywang1031.github.io/greedySnakeGame/"
+              target="_blank"
+              class="worksTitle"
+              >貪食蛇遊戲</a
+            >
             <p class="worksMethods">使用Html , CSS , JavaScript</p>
           </li>
         </ul>
@@ -61,7 +71,12 @@
         <ul>
           <li>
             <p class="worksDate">2024.2月</p>
-            <a href="" target="_blank" class="worksTitle">計算分數網站</a>
+            <a
+              href="https://wendywang1031.github.io/CountingGrades/"
+              target="_blank"
+              class="worksTitle"
+              >計算分數網站</a
+            >
             <p class="worksMethods">使用Html , CSS , JavaScript</p>
           </li>
         </ul>
