--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
             <p class="worksMethods">使用React框架</p>
           </li>
           <li>
-            <a href="" target="_blank" class="worksTitle">ooxx遊戲</a>
+            <a
+              href="/Users/pinyilee/Documents/wendy/ooxxGames/package.json"
+              target="_blank"
+              class="worksTitle"
+              >ooxx遊戲</a
+            >
             <p class="worksMethods">使用React框架</p>
           </li>
         </ul>
@@ -103,9 +108,13 @@
         <ul>
           <li>
             <p class="worksDate">2023.12月</p>
-            <a href="" target="_blank" class="worksTitle">猜數字遊戲</a>
+            <a
+              href="https://wendywang1031.github.io/Guessing-Number/"
+              target="_blank"
+              class="worksTitle"
+              >猜數字遊戲</a
+            >
             <p class="worksMethods">使用Html , CSS , JavaScript</p>
-            <p class="worksMethods">使用React框架</p>
           </li>
         </ul>
       </section>
