--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
           <li>
             <a
-              href="/Users/pinyilee/Documents/wendy/ooxxGames/package.json"
+              href="https://wendywang1031.github.io/ooxxGames/"
               target="_blank"
               class="worksTitle"
               >ooxx遊戲</a
@@ -121,7 +121,7 @@
 
       <section class="rangeLearningTime">
         <h1>如果參與這個訓練，會怎麼安排學習時間？</h1>
-        <h4>除了依照訓練計畫的大維度三階段時程安排</h4>
+        <h4>除了依照WeHelp訓練計畫的大維度三階段時程安排</h4>
         <div class="rangeTimeTitle">
           <p class="rangeTimeTitle">以一週來分四個時間刻度</p>
         </div>
@@ -211,11 +211,11 @@
       <section class="emotionalMoment">
         <h1>請描述一件產生明顯負面情緒的經歷，如何處理該情緒？</h1>
         <p>
-          曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，
-          意識到面試過程中，自己需要加強的部分，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：其他競爭對手同學的能力與努力是更多的，這是我能夠參考與自我激勵之處。
+          曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中感受到悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，
+          意識到面試過程中，自己需要加強的部分，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：其他競爭對手同學的準備與努力是更多的，這是我能夠參考與自我激勵之處。
           消化情緒後並轉移注意力，前往健身房運動去消耗些許精力。
-          爾後，從頭審視學習計畫，把缺漏的基礎能力給重新補上，將根基打穩，
-          並且回頭尋找相對應較不熟的議題，學習網路上的教學去做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
+          爾後，從頭審視學習計畫並作調整，把缺漏的基礎能力給重新補上，將根基打穩，
+          並且回頭尋找相對應較不熟且基礎的議題，學習網路上的教學跟做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
           <br />
           這次的經驗我的心得是：
         </p>
@@ -235,17 +235,17 @@
         <ul>
           <li class="developTitle">編寫設計</li>
           <div>
-            回應問題的編寫內容是讓自己反思的機會，將內容編寫完成後的結構大綱的整理，例如需要把內容分為大標題、段落項、說明內容的Html的樹狀結構標籤，需要清楚明白自己撰寫的內容怎麼整理歸納，而結構的安排也會影響到樣式的呼叫與影響範圍此階段大概要至少有個大概雛形。
+            回應問題的編寫內容是讓自己反思的機會，將內容編寫完成後的結構大綱的整理，例如：需要把內容分為大標題、段落項、說明內容的Html的樹狀結構標籤，需要清楚明白自己撰寫的內容如何整理歸納，而結構的安排也會影響到樣式的呼叫、影響範圍，此階段要至少有個大概雛形。
           </div>
           <div>
-            CSS樣式將預設移除，先去理解BoxModel的重要性，會影響到並且先設定大致需要的版型，例如標題需要統一對齊頁面正中間、內文的標題需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
+            CSS樣式將預設移除，先去理解BoxModel的重要性，會影響到版面細節、間距...等等，並且先設定大致需要的版型，例如：標題需要統一對齊頁面正中間、內文需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
           </div>
           <li class="developTitle">實現與解決問題</li>
           <div>
-            遇到問題像是子層級的樣式編輯後沒有反應，回頭檢閱結構發現母層級的樣式已被設定，所以需要將子層級另外額外獨立處置，或是需要將結構在劃分的更細節，在此階段需要時常去理解「結構分類的重要性」理解得越充分，在找問題的過程才會比較順利，這是需要多次練習的。
+            遇到問題像是子層級的樣式編輯後沒有反應，回頭檢閱結構發現母層級的樣式已被設定，所以需要將子層級另外額外獨立處置，或是需要將結構再劃分的更細節、或是將母層級的設定樣式從簡，設計過程的前置想法上的整合，大方向規劃完善才會使設計過程運作順暢。在此階段需要時常去理解「結構分類的重要性」與「設計版面的大方向」、理解得越充分，在找問題的過程才會比較順利，這是需要多次練習的。
           </div>
           <div>
-            設計狀況遇上的問題是想要嘗試不同樣式類別，如果放太多風格的樣式，導致版面越來越亂，所以需要做取捨及統一樣式，由主要的風格定下後，細節的安排就遵循簡單。
+            設計狀況遇上的問題是除了前期的大方向版面規劃不夠完善之外，想要嘗試不同樣式類別，如果放太多風格的樣式，導致版面越來越亂，所以需要做取捨及統一樣式，由主要的風格定下後，並來回檢視版面整體的一致性，細節的安排就遵循簡單。
           </div>
           <li class="developTitle">體會</li>
           <ul>
