--- a/index.html
+++ b/index.html
@@ -242,21 +242,33 @@
           </div>
           <li class="developTitle">實現與解決問題</li>
           <div>
-            遇到問題像是子層級的樣式編輯後沒有反應，回頭檢閱結構發現母層級的樣式已被設定，所以需要將子層級另外額外獨立處置，或是需要將結構再劃分的更細節、或是將母層級的設定樣式從簡，設計過程的前置想法上的整合，大方向規劃完善才會使設計過程運作順暢。在此階段需要時常去理解「結構分類的重要性」與「設計版面的大方向」、理解得越充分，在找問題的過程才會比較順利，這是需要多次練習的。
+            <p>結構問題</p>
+
+            像是子層級的樣式編輯後沒有反應，回頭檢閱結構發現母層級的樣式已被設定，所以需要將子層級另外額外獨立處置，或是需要將結構再劃分的更細節、或是將母層級的設定樣式從簡，設計過程的前置想法上的整合，大方向規劃完善才會使設計過程運作順暢。在此階段需要時常去理解「結構分類的重要性」與「設計版面的大方向」、理解得越充分，在找問題的過程才會比較順利，這是需要多次練習的。
           </div>
           <div>
-            設計狀況遇上的問題是除了前期的大方向版面規劃不夠完善之外，想要嘗試不同樣式類別，如果放太多風格的樣式，導致版面越來越亂，所以需要做取捨及統一樣式，由主要的風格定下後，並來回檢視版面整體的一致性，細節的安排就遵循簡單。
+            <p>設計問題</p>
+
+            是除了前期的大方向版面規劃不夠完善之外，想要嘗試不同樣式類別，如果放太多風格的樣式，導致版面越來越亂，所以需要做取捨及統一樣式，由主要的風格定下後，並來回檢視版面整體的一致性，細節的安排就遵循簡單。
+          </div>
+          <div>
+            <p>Git的分支使用問題</p>
+
+            在準備把不同練習作品上傳至GitHub並成立GitHub
+            Pages，在設定使用SSH進行身份驗證，不小心把不同專案的SSH連結貼錯並且把專案內容強制覆蓋，導致專案遺失，此經驗心得是需要辨別不同專案的SSH連結，並且要識別目前要操作的分支。提醒我的是往後要與同事合作，終端機要是詢問衝突，需要更細心地找尋為什麼衝突，而不是沒搞懂運作機制就是直接覆蓋掉，此舉在往後可能會造成專案上的問題。
           </div>
           <li class="developTitle">體會</li>
           <ul>
             <li class="developSmallTitle">BoxModel的熟悉度</li>
             <div>在設定margin、padding..等等都會影響整體版面的呈現效果</div>
             <li class="developSmallTitle">結構的整理劃分</li>
-            <div>結構在初期整理得越好，中後期設計樣式會更為方便、快速。</div>
+            <div>結構在初期整理得越好，中後期設計樣式會更為方便、快速</div>
             <li class="developSmallTitle">統一風格</li>
             <div>
               細節的設計不要貪心，不是越多越好，是遵循當初所定的風格來實作
             </div>
+            <li class="developSmallTitle">GitHub分支使用</li>
+            <div>辨識目前分支，作出適當操作，有衝突找尋原因</div>
           </ul>
         </ul>
       </section>
