fix content & fix a color

--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
             <li class="developSmallTitle">BoxModel的熟悉度</li>
             <div>在設定margin、padding..等等都會影響整體版面的呈現效果</div>
             <li class="developSmallTitle">結構的整理劃分</li>
-            <div>結構在初期整理得越好，中後期設計樣式會更為方便、快速</div>
+            <div>
+              結構在初期整理得越清晰明確，中後期設計樣式會更為方便、快速
+            </div>
             <li class="developSmallTitle">統一風格</li>
             <div>
               細節的設計不要貪心，不是越多越好，是遵循當初所定的風格來實作
