update & fix content

--- a/index.html
+++ b/index.html
@@ -66,16 +66,29 @@
         <section class="selfDoingText">
           <h1>為了成為軟體工程師，做過什麼努力？</h1>
           <hr />
-          <p>
+          <div class="a">
             <a href="https://github.com/WendyWang1031">GitHub</a>
-            <br />
-            自上一年十月份，開始自學Udacity網站的JavaScript入門階段。這階段的學習對我的邏輯思考能力提供了基礎的梳理。特別著重了對「錯誤的寶貴經驗」的認識。
-            <br />
-            同時，我搭配學習基礎的Udemy的「全端網頁開發」教學影片，初步認識了Html與CSS，使我感受到了建構網頁和設計樣式的基本能力。
-            通過freeCodeCamp教學網站練習，希望能夠牢固奠定基礎。
-            <br />
-            進一步學習「克服JS奇怪的部分」，深入了解了JavaScript的框架與執行環境，作用域和閉包的概念對我來說是一個較難理解的主題，但我致力於理解其運作機制。
-          </p>
+          </div>
+
+          <div class="work-hard-content">
+            <ul>
+              <li>入門</li>
+              <p>
+                自上一年十月份，開始自學Udacity網站的JavaScript入門階段。這階段的學習對我的邏輯思考能力提供了基礎的梳理。特別著重了對「錯誤的寶貴經驗」的認識。
+              </p>
+              <li>基礎</li>
+              <p>
+                我搭配學習基礎的Udemy的「全端網頁開發」教學影片，初步認識了Html與CSS，使我感受到了建構網頁和設計樣式的基本能力。
+                通過freeCodeCamp教學網站練習，希望能夠牢固奠定基礎。
+                <br />
+                進一步學習「克服JS奇怪的部分」，深入了解了JavaScript的框架與執行環境，作用域和閉包的概念對我來說是一個進階的主題，但我致力於理解其運作機制。
+              </p>
+              <li>進階</li>
+              <p>
+                初探React框架、閱讀官方文件，以及藉由鐵人賽文章練習串接氣象局api、製作氣象局介面，過程體會到JavaScript基礎的重要性，這段旅程讓我建立了對ES6語法的熟悉理解，儘管在解決問題的過程中充滿了挑戰，但這同時也強化了我對React框架的認識。
+              </p>
+            </ul>
+          </div>
         </section>
       </section>
       <section class="selfDoingLink" id="selfDoingLink">
@@ -298,14 +311,15 @@
           <h1>請描述一件產生明顯負面情緒的經歷，如何處理該情緒？</h1>
           <hr />
           <p>
-            曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中感受到悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，
-            意識到面試過程中，自己需要加強的部分，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：其他競爭對手同學的準備與努力是更多的，這是我能夠參考與自我激勵之處。
-            消化情緒後並轉移注意力，前往健身房運動去消耗些許精力。
-            爾後，從頭審視學習計畫並作調整，把缺漏的基礎能力給重新補上，將根基打穩，
-            並且回頭尋找相對應較不熟且基礎的議題，學習網路上的教學跟做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
+            曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中感受到悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，意識到面試過程中，自己需要加強的部分，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：
             <br />
-            這次的經驗我的心得是：
+            其他競爭對手同學的準備與努力是更多的，這是我能夠參考與自我激勵之處。消化情緒後並轉移注意力，前往健身房運動去消耗些許精力。
+            <br />
           </p>
+          <p>
+            爾後，從頭審視學習計畫並作調整，把缺漏的基礎能力給重新補上，將根基打穩，並且回頭尋找相對應較不熟且基礎的議題，學習網路上的教學跟做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
+          </p>
+          <p>這次的經驗我的心得是：</p>
           <h3>
             「不同學習管道是手段之一，最終的目標還是不變的，是成為一名能夠獨立自主的Junior前端工程師。」
           </h3>
