adjust intro content

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
             ><span>n</span><span>d</span><span>y</span>
             <span>!</span>
           </h1>
+          <p>曾擔任3D動畫師，主要參與遊戲動畫內容的製作。</p>
           <p>
-            曾擔任3D動畫師，主要參與遊戲動畫內容的製作。
+            在參與多個遊戲開發專案的過程中，透過與團隊合作，成功克服了各種技術上的挑戰。
             <br />
-            在參與多個遊戲開發專案的過程中，透過與團隊合作，成功克服了各種技術上的挑戰。這些經驗深深激發了我對軟體開發的渴望。
+            這些經驗深深激發了我對軟體開發的渴望。
             <br />
             由於遊戲產業變動，近幾年，開始思考自己的職業方向。
-            <br />
+          </p>
+          <p>
             在過去的半年，做出了轉換的決定，希望將我的技能和熱情投入更廣泛的網頁前端領域。
             <br />
             期待能在這充滿挑戰和機會的領域中，不斷學習和成長。
