--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             由於遊戲產業變動，近幾年，開始思考自己的職業方向。
           </p>
           <p>
-            在過去的半年，做出了轉換的決定，希望將我的技能和熱情投入更廣泛的網頁前端領域。
+            在過去的半年，做出了轉換的決定，希望將我的技能和熱情投入網頁前端領域。
             <br />
             期待能在這充滿挑戰和機會的領域中，不斷學習和成長。
           </p>
@@ -81,7 +81,7 @@
               <li>基礎</li>
               <p>
                 我搭配學習基礎的Udemy的「全端網頁開發」教學影片，初步認識了Html與CSS，使我感受到了建構網頁和設計樣式的基本能力。
-                通過freeCodeCamp教學網站練習，希望能夠牢固奠定基礎。
+                通過freeCodeCamp教學網站練習，希望能夠奠定基礎。
                 <br />
                 進一步學習「克服JS奇怪的部分」，深入了解了JavaScript的框架與執行環境，作用域和閉包的概念對我來說是一個進階的主題，但我致力於理解其運作機制。
               </p>
@@ -271,11 +271,11 @@
         <section class="company-content">
           <h1>是否有想要加入的公司？為什麼想加入該公司？</h1>
           <hr />
+          <p>嚮往的電商平台公司：蝦皮、momo、PChome</p>
           <p>
-            以有興趣的電商平台公司種類為例子：蝦皮、momo、PChome
-            <br />
             雖然對電商行業並沒有深入的專業層次認識，但作為一名喜歡購物的消費者，經常使用不同的購物電商平台，這些體驗讓我看到了電商平台在技術和用戶體驗方面的不斷提升。
           </p>
+
           <p>以下是我觀察與體驗的技術：</p>
           <div class="ul-content">
             <ul>
@@ -321,12 +321,12 @@
           <p>
             爾後，從頭審視學習計畫並作調整，把缺漏的基礎能力給重新補上，將根基打穩，並且回頭尋找相對應較不熟且基礎的議題，學習網路上的教學跟做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
           </p>
-          <p>這次的經驗我的心得是：</p>
+          <p>這次的經驗我的想法轉化：</p>
           <h3>
             「不同學習管道是手段之一，最終的目標還是不變的，是成為一名能夠獨立自主的Junior前端工程師。」
           </h3>
 
-          <p>以下是遇到負面情緒狀態的處理步驟：</p>
+          <p>以下是遇到負面情緒狀態的體會：</p>
           <div>
             <ol>
               <li>接受情緒的流動</li>
@@ -348,7 +348,11 @@
                   回應問題的編寫內容是讓自己反思的機會，將內容編寫完成後的結構大綱的整理，例如：需要把內容分為大標題、段落項、說明內容的Html的樹狀結構標籤，需要清楚明白自己撰寫的內容如何整理歸納，而結構的安排也會影響到樣式的呼叫、影響範圍，此階段要至少有個大概雛形。
                 </p>
                 <p class="p-content">
-                  CSS樣式將預設移除，先去理解BoxModel的重要性，會影響到版面細節、間距...等等，並且先設定大致需要的版型，例如：標題需要統一對齊頁面正中間、內文需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
+                  CSS樣式將預設移除，先去理解Box
+                  Model、FlexBox的重要性，會影響到版面細節、間距...等等，並且先設定大致需要的版型，例如：標題需要統一對齊頁面正中間、內文需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
+                </p>
+                <p>
+                  初版時期設計過程不夠謹慎，造成不同裝置的網頁呈現字的間距跑版，對於Flexbox的理解不夠，在過程中隨意擺放樣式設計，中期要改動會非常困難，後來決定全部重頭設計，並且重新理解Flexbox的用法，以及母層級的善用。
                 </p>
               </div>
             </div>
@@ -380,8 +384,8 @@
             <div class="feel-touching">
               <div>
                 <ul>
-                  <li class="developSmallTitle">BoxModel的熟悉度</li>
-                  <p>在設定margin、padding..等等都會影響整體版面的呈現效果</p>
+                  <li class="developSmallTitle">Box Model、Flexbox</li>
+                  <p>設定Box Model、Flexbox會影響整體版面的呈現效果</p>
                   <li class="developSmallTitle">結構的整理劃分</li>
                   <p>
                     結構在初期整理得越清晰明確，中後期設計樣式會更為方便、快速
@@ -405,7 +409,7 @@
           <hr />
           <h3>「有事做、有人愛、有所期待」</h3>
           <p>
-            透過積極參與事務與學習，目標的追求與實現，給予和接受他人的愛，以及對未來抱持期望，展現對生活目標的成長和人際關係的交流帶來滿足感。
+            透過尊重與理解，希望能夠建立健康的人際關係，使我在積極參與事務、獲得他人的愛和支持，以及對未來充滿希望和期待時，彼此感受到更多的溫暖與理解。
           </p>
         </section>
       </section>
