update html content

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <br />
           </p>
           <p>
-            爾後，從頭審視學習計畫並作調整，把缺漏的基礎能力給重新補上，將根基打穩，並且回頭尋找相對應較不熟且基礎的議題，學習網路上的教學跟做練習與熟悉程式碼。再尋求更多層面的學習營，上網搜尋且評估自身能力去尋找適合自己的學習管道，
+            爾後，我計劃從頭審視我的學習計畫並進行調整，著重於調整複習基礎能力，以打穩我的根基。同時，我也會回頭尋找相對較不熟悉且基礎的議題，並透過網路上的教學和練習來加深對程式碼的理解和熟悉程度。此外，我也會積極尋求更多層面的學習機會，通過上網搜尋和評估自身能力，找到適合我的學習管道。
           </p>
           <p>這次的經驗我的想法轉化：</p>
           <h3>
@@ -345,14 +345,14 @@
             <div class="design-content">
               <div>
                 <p class="p-content">
-                  回應問題的編寫內容是讓自己反思的機會，將內容編寫完成後的結構大綱的整理，例如：需要把內容分為大標題、段落項、說明內容的Html的樹狀結構標籤，需要清楚明白自己撰寫的內容如何整理歸納，而結構的安排也會影響到樣式的呼叫、影響範圍，此階段要至少有個大概雛形。
+                  在編寫回應問題的內容時，我將內容分為大標題、段落項和說明內容，並將其整理成Html的樹狀結構標籤。這有助於清晰明瞭地組織我的思維，並確保內容的結構和邏輯性。此外，結構的安排也會影響到樣式的呼叫和影響範圍，因此在這個階段，會至少有一個大概的雛形來安排內容。
                 </p>
                 <p class="p-content">
                   CSS樣式將預設移除，先去理解Box
-                  Model、FlexBox的重要性，會影響到版面細節、間距...等等，並且先設定大致需要的版型，例如：標題需要統一對齊頁面正中間、內文需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
+                  Model、FlexBox的重要性，會影響到版面排版、間距...等等，並且先設定大致需要的版型，例如：標題需要統一對齊頁面正中間、內文需要統一上下的間距，統一的重要性影響了版面整體性的整潔。
                 </p>
                 <p>
-                  初版時期設計過程不夠謹慎，造成不同裝置的網頁呈現字的間距跑版，對於Flexbox的理解不夠，在過程中隨意擺放樣式設計，中期要改動會非常困難，後來決定全部重頭設計，並且重新理解Flexbox的用法，以及母層級的善用。
+                  初版時期設計過程使用了絕對單位、對於Flexbox的理解不夠透徹，造成不同裝置的網頁呈現字的間距跑版，中期要改動會非常困難，後來決定全部重頭設計，並且重新理解Flexbox的用法，以及母層級的善用。
                 </p>
               </div>
             </div>
@@ -363,19 +363,20 @@
                   <li>結構問題</li>
 
                   <p>
-                    像是子層級的樣式編輯後沒有反應，回頭檢閱結構發現母層級的樣式已被設定，所以需要將子層級另外額外獨立處置，或是需要將結構再劃分的更細節、或是將母層級的設定樣式從簡，設計過程的前置想法上的整合，大方向規劃完善才會使設計過程運作順暢。在此階段需要時常去理解「結構分類的重要性」與「設計版面的大方向」、理解得越充分，在找問題的過程才會比較順利，這是需要多次練習的。
+                    在設計過程中，遇到子層級樣式編輯後沒有反應的情況。這時需要重新檢視結構，發現是母層級樣式已經設定，所以需要將子層級另外獨立處置，或者更進一步劃分結構的細節。在設計前需要明確大方向，可能需要將母層級的設定樣式從簡，這樣設計過程才能順暢進行。理解結構分類的重要性和設計版面的整體大方向是必要的，它們有助於更好地理解問題所在，這需要不斷的練習。
                   </p>
 
                   <li>設計問題</li>
 
                   <p>
-                    是除了前期的大方向版面規劃不夠完善之外，想要嘗試不同樣式類別，如果放太多風格的樣式，導致版面越來越亂，所以需要做取捨及統一樣式，由主要的風格定下後，並來回檢視版面整體的一致性，細節的安排就遵循簡單。
+                    我重新設計第二版的決心和動力來自於從初版設計中學到的寶貴教訓。這次經驗讓我深刻意識到設計過程中對於基本概念理解的重要性以及單位選擇上的關鍵性。因此，我投入於重新理解Box
+                    Model和Flexbox，並將相對單位視為主要使用的單位。這種動力來自於渴望提供更好的設計、提升使用體驗。
                   </p>
                   <li>Git的分支使用問題</li>
 
                   <p>
-                    在準備把不同練習作品上傳至GitHub並成立GitHub
-                    Pages，在設定使用SSH進行身份驗證，不小心把不同專案的SSH連結貼錯並且把專案內容強制覆蓋，導致專案遺失，此經驗心得是需要辨別不同專案的SSH連結，並且要識別目前要操作的分支。提醒我的是往後要與同事合作，終端機要是詢問衝突，需要更細心地找尋為什麼衝突，而不是沒搞懂運作機制就是直接覆蓋掉，此舉在往後可能會造成專案上的問題。
+                    在準備將不同練習作品上傳至GitHub並設立GitHub
+                    Pages時，我不小心將不同專案的SSH連結貼錯，導致專案內容被強制覆蓋並遺失。這次經驗讓我深刻認識到了辨別不同專案的SSH連結的重要性，以及識別目前操作的分支的必要性。這也提醒我在未來與同事合作時，應該更加細心地處理衝突，而不是單純地覆蓋掉，以免造成專案上的問題。
                   </p>
                 </ul>
               </div>
@@ -385,14 +386,14 @@
               <div>
                 <ul>
                   <li class="developSmallTitle">Box Model、Flexbox</li>
-                  <p>設定Box Model、Flexbox會影響整體版面的呈現效果</p>
+                  <p>會影響整體版面、排版、間距的呈現效果</p>
                   <li class="developSmallTitle">結構的整理劃分</li>
                   <p>
                     結構在初期整理得越清晰明確，中後期設計樣式會更為方便、快速
                   </p>
                   <li class="developSmallTitle">統一風格</li>
                   <p>
-                    細節的設計不要貪心，不是越多越好，是遵循當初所定的風格來實作
+                    細節的設計不貪心，不是越多越好，是遵循當初所定的風格來實作
                   </p>
                   <li class="developSmallTitle">GitHub分支使用</li>
                   <div>辨識目前分支，作出適當操作，有衝突找尋原因</div>
@@ -407,9 +408,9 @@
         <section class="selfPrinciple-content">
           <h1>請用簡短兩三句話，描述對你而言，最重要的一項人際交往原則。</h1>
           <hr />
-          <h3>「有事做、有人愛、有所期待」</h3>
+          <h3>「尊重、理解、支持」</h3>
           <p>
-            透過尊重與理解，希望能夠建立健康的人際關係，使我在積極參與事務、獲得他人的愛和支持，以及對未來充滿希望和期待時，彼此感受到更多的溫暖與理解。
+            尊重是建立良好人際關係的基石，是我們與他人相處的第一步。理解則是真正了解對方，與其共鳴、深化連結的橋樑，而支持則是在他們需要時給予幫助和鼓勵，關係持續發展的動力。
           </p>
         </section>
       </section>
@@ -417,7 +418,11 @@
         <section class="anythingElse-content">
           <h1>其他想要對我們說的事情？</h1>
           <hr />
-          <p>\ 期待與各位想實現目標的同伴相見 /</p>
+          <p>
+            \
+            期待與各位一同踏上已經啟程的目標實現旅程，成為彼此在路上的同伴和支持者。
+            /
+          </p>
         </section>
       </section>
     </main>
