--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
 
           <div class="work-hard-content">
             <ul>
-              <li>入門</li>
-              <p>
-                自上一年十月份，開始自學Udacity網站的JavaScript入門階段。這階段的學習對我的邏輯思考能力提供了基礎的梳理。特別著重了對「錯誤的寶貴經驗」的認識。
-              </p>
               <li>基礎</li>
               <p>
-                我搭配學習基礎的Udemy的「全端網頁開發」教學影片，初步認識了Html與CSS，使我感受到了建構網頁和設計樣式的基本能力。
-                通過freeCodeCamp教學網站練習，希望能夠奠定基礎。
+                自上一年十月份，開始自學Udacity網站的JavaScript入門階段。這階段的學習對我的邏輯思考能力提供了基礎的梳理，練習與以往不同的思考邏輯，我認為對情緒、思考的方向有相當大的幫助，例如：學會如何分析和解決難題來幫助思考脈絡、藉由創造來實現想法與概念來達成很高程度的成就感。而編寫程式碼出現問題時，面對問題與理解為何錯誤的原因，特別著重了對「錯誤的寶貴經驗」的認識，每次的出錯都是進步的基石。
+              </p>
+              <li>入門</li>
+              <p>
+                我搭配學習基礎的Udemy的「全端網頁開發」教學影片，認識了Html與CSS，使我感受到了建構網頁和設計樣式的基本能力、理解Flexbox。
+                通過freeCodeCamp教學網站練習，奠定基礎。並且藉由影片來練習不同層度的專案練習，以及學習版本控制工具。
                 <br />
-                進一步學習「克服JS奇怪的部分」，深入了解了JavaScript的框架與執行環境，作用域和閉包的概念對我來說是一個進階的主題，但我致力於理解其運作機制。
+                進一步學習「克服JS奇怪的部分」，深入了解了JavaScript的框架與執行環境，作用域和閉包的概念對我來說是一個較深的議題，但我致力於理解其運作機制。
               </p>
               <li>進階</li>
               <p>
-                初探React框架、閱讀官方文件，以及藉由鐵人賽文章練習串接氣象局api、製作氣象局介面，過程體會到JavaScript基礎的重要性，這段旅程讓我建立了對ES6語法的熟悉理解，儘管在解決問題的過程中充滿了挑戰，但這同時也強化了我對React框架的認識。
+                初探React框架、閱讀官方文件，藉由鐵人賽文章練習串接氣象局api、製作氣象局介面，過程體會到JavaScript基礎的重要性，這段旅程讓我建立了對ES6語法的熟悉理解，儘管在解決問題的過程中充滿了挑戰，但這同時也強化了我對React框架的認識，期許藉由專案製作能越來越熟悉框架的使用。
               </p>
             </ul>
           </div>
@@ -218,12 +218,12 @@
               <li>
                 <div class="rangeDate">週一~週二</div>
                 <div class="rangeContent">
-                  開會、理解當週任務安排關鍵字，搜尋、實作
+                  開會、安排當週進度、理解當週任務，搜尋、實作
                 </div>
               </li>
               <li>
                 <div class="rangeDate">週三~週四</div>
-                <div class="rangeContent">實作、討論</div>
+                <div class="rangeContent">實作、討論、檢視當週進度</div>
               </li>
               <li>
                 <div class="rangeDate">週五</div>
@@ -302,8 +302,7 @@
           </div>
 
           <p>
-            電商平台的前端開發往往需要應付複雜的用戶介面和優化用戶體驗的挑戰，通常面臨龐大數據量和複雜的交易流程，能讓我更好理解商業運作和用戶需求，
-            <br />渴望在技術開發資源龐大的體系下，了解、學習並且能夠為公司實際產出相對應的技術開發。
+            電商平台的前端開發往往需要應付複雜的用戶介面和優化用戶體驗的挑戰，通常面臨龐大數據量和複雜的交易流程，能讓我更好理解商業運作和用戶需求，了解、學習並且能夠為公司實際產出相對應的技術開發。
           </p>
         </section>
       </section>
@@ -313,13 +312,16 @@
           <h1>請描述一件產生明顯負面情緒的經歷，如何處理該情緒？</h1>
           <hr />
           <p>
-            曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中感受到悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，意識到面試過程中，自己需要加強的部分，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：
+            曾經申請並前往面試免費的程式學習Bootcamp，在今年一月底得知錄取失敗，當下心中感受到悲傷與挫折，花了幾個小時與挫折的情緒共存，消化與回顧面試上需要改進的地方，意識到面試過程中，自己需要加強的部分，例如，當時在回答基礎Js邏輯題，一分鐘內無法如期回答，並將其記錄下來，作為往後需要特別留意的部分，並對自我激勵：
             <br />
             其他競爭對手同學的準備與努力是更多的，這是我能夠參考與自我激勵之處。消化情緒後並轉移注意力，前往健身房運動去消耗些許精力。
             <br />
           </p>
           <p>
-            爾後，我計劃從頭審視我的學習計畫並進行調整，著重於調整複習基礎能力，以打穩我的根基。同時，我也會回頭尋找相對較不熟悉且基礎的議題，並透過網路上的教學和練習來加深對程式碼的理解和熟悉程度。此外，我也會積極尋求更多層面的學習機會，通過上網搜尋和評估自身能力，找到適合我的學習管道。
+            爾後，我從頭審視學習計畫並進行調整，著重於檢討與練習基礎，以打穩我的根基。同時，回頭尋找相對較不熟悉且基礎的議題，並透過網路上的教學和練習來加深對程式碼的理解和熟悉程度。
+          </p>
+          <p>
+            此外，本次的挫折經驗對自我提問，需要執著唯一一個學習營嗎？是否還能尋求其他學習機會呢？我的目標還是一致的嗎？思量這些問題後，積極尋求更多層面的學習機會，通過上網搜尋和評估自身能力，找到適合我的學習管道。
           </p>
           <p>這次的經驗我的想法轉化：</p>
           <h3>
@@ -363,7 +365,7 @@
                   <li>結構問題</li>
 
                   <p>
-                    在設計過程中，遇到子層級樣式編輯後沒有反應的情況。這時需要重新檢視結構，發現是母層級樣式已經設定，所以需要將子層級另外獨立處置，或者更進一步劃分結構的細節。在設計前需要明確大方向，可能需要將母層級的設定樣式從簡，這樣設計過程才能順暢進行。理解結構分類的重要性和設計版面的整體大方向是必要的，它們有助於更好地理解問題所在，這需要不斷的練習。
+                    在設計過程中，我遇到子層級樣式編輯後沒有反應的情況。這時需要重新檢視結構，發現是母層級樣式已經設定，所以需要將子層級另外獨立處置，或者更進一步劃分結構的細節。在設計前需要明確大方向，可能需要將母層級的設定樣式從簡，這樣設計過程才能順暢進行。理解結構分類的重要性和設計版面的整體大方向是必要的，它們有助於更好地理解問題所在，這需要不斷的練習。
                   </p>
 
                   <li>設計問題</li>
@@ -376,7 +378,7 @@
 
                   <p>
                     在準備將不同練習作品上傳至GitHub並設立GitHub
-                    Pages時，我不小心將不同專案的SSH連結貼錯，導致專案內容被強制覆蓋並遺失。這次經驗讓我深刻認識到了辨別不同專案的SSH連結的重要性，以及識別目前操作的分支的必要性。這也提醒我在未來與同事合作時，應該更加細心地處理衝突，而不是單純地覆蓋掉，以免造成專案上的問題。
+                    Pages時，我不小心將不同專案的SSH連結貼錯，導致專案內容被強制覆蓋並遺失。這次經驗讓我深刻認識到了辨別目前操作的分支、主支，識別當前專案本機、遠端倉庫的必要性。這也提醒我在未來與同事合作時，應該更加細心地處理衝突，而不是單純地覆蓋掉，以免造成專案上的問題。
                   </p>
                 </ul>
               </div>
@@ -410,7 +412,7 @@
           <hr />
           <h3>「尊重、理解、支持」</h3>
           <p>
-            尊重是建立良好人際關係的基石，是我們與他人相處的第一步。理解則是真正了解對方，與其共鳴、深化連結的橋樑，而支持則是在他們需要時給予幫助和鼓勵，關係持續發展的動力。
+            尊重是建立良好人際關係的基礎，是我與他人相處的第一步。理解則是真正了解對方，與其共鳴、深化連結的橋樑，而支持則是在同伴需要時給予幫助和鼓勵，關係持續發展的動力。
           </p>
         </section>
       </section>
@@ -419,8 +421,7 @@
           <h1>其他想要對我們說的事情？</h1>
           <hr />
           <p>
-            \
-            期待與各位一同踏上已經啟程的目標實現旅程，成為彼此在路上的同伴和支持者。
+            \ 期待與各位，成為彼此在路上的同伴和支持者，一同踏上實現目標的旅程。
             /
           </p>
         </section>
